index.html änderung

--- a/Frontend/static/index.html
+++ b/Frontend/static/index.html
@@ -40,7 +40,7 @@
                     <a>Bewertung bearbeiten</a>
                 </li>
                 <li data-page-name="reservation">
-                    <a href="#/reservation">Reservierung abgeben</a>
+                    <a href="#/reservation/">Reservierung abgeben</a>
                 </li>
                 <li data-page-name="editReservation" class="non-interactive">
                     <a>Reservierung bearbeiten</a>
