Änderungen an API und Index sowie Reservation

--- a/Frontend/src/page-reservation/page-reservation.html
+++ b/Frontend/src/page-reservation/page-reservation.html
@@ -70,17 +70,20 @@
 
         <!-- Vorlage für einen Eintrag in der Liste -->
         <li class="list-entry" data-id="$ID$">
-            <div class="title">
-                $MOVIETITLE$
+            <div class="firstName">
+                $FIRSTNAME$
             </div>
-            <div class="reggiseur">
-                $REGGISEUR$
+            <div class="secondName">
+                $SECONDNAME$
             </div>
-            <div class="field releaseDate">
-                $RELEASEDATE$
+            <div class="field email">
+                $EMAIL$
             </div>
-            <div class="field playtime">
-                $PLAYTIME$
+            <div class="field movietitle">
+                $MOVIETITLE_RESERV$
+            </div>
+            <div class="field date">
+                $DATE$
             </div>
             <div class="actions">
                 <div class="action edit">
