--- a/Frontend/static/index.html
+++ b/Frontend/static/index.html
@@ -39,6 +39,9 @@
                 <li data-page-name="editRate" class="non-interactive">
                     <a>Bewertung bearbeiten</a>
                 </li>
+                <li data-page-name="reservationList">
+                    <a href="#/reservationList/">Reservierungen</a>
+                </li>
                 <li data-page-name="reservation">
                     <a href="#/reservation/">Reservierung abgeben</a>
                 </li>
