Veränderungen und Fehlerbehebung

--- a/Frontend/src/page-reservationEdit/page-reservationEdit.html
+++ b/Frontend/src/page-reservationEdit/page-reservationEdit.html
@@ -52,10 +52,11 @@
 <main>
     <div>
         <div class="form">
-            <input class="movieTitle" placeholder="Filmname" value="$MOVIETITLE$" />
-            <input class="reggiseur" placeholder="Reggiseur" value="$REGGISEUR$" />
-            <input class="releaseDate" placeholder="Veröffentlichung Datum" value="$RELEASEDATE$" />
-            <input class="playtime" placeholder="Spielzeit" value="$PLAYTIME$" />
+            <input class="firstName" placeholder="Name" value="$FIRSTNAME$" />
+            <input class="secondName" placeholder="Nachname" value="$SECONDNAME$" />
+            <input class="email" placeholder="Email" value="$EMAIL$" />
+            <input class="movieTitle_reserv" placeholder="Filmtitel" value="$MOVIETITLE_RESERV$" />
+            <input class="date" placeholder="Datum" value="$DATE$" />
         </div>
         <div class="actions">
             <div class="action save">
