--- a/Frontend/static/index.html
+++ b/Frontend/static/index.html
@@ -34,16 +34,16 @@
                     <a href="#/ratingList/">Bewertungen</a>
                 </li>
                 <li data-page-name="rate">
-                    <a href="#/rate/">Bewertung abgeben</a>
+                    <a href="#/newRating/">Bewertung abgeben</a>
                 </li>
                 <li data-page-name="editRate" class="non-interactive">
                     <a>Bewertung bearbeiten</a>
                 </li>
                 <li data-page-name="reservationList">
-                    <a href="#/reservationList/">Reservierungen</a>
+                    <a href="#/reservList/">Reservierungen</a>
                 </li>
                 <li data-page-name="reservation">
-                    <a href="#/reservation/">Reservierung abgeben</a>
+                    <a href="#/newReserv/">Reservierung abgeben</a>
                 </li>
                 <li data-page-name="editReservation" class="non-interactive">
                     <a>Reservierung bearbeiten</a>
