--- a/Frontend/src/page-ratingList/page-ratingList.html
+++ b/Frontend/src/page-ratingList/page-ratingList.html
@@ -70,7 +70,7 @@
 
         <!-- Vorlage für einen Eintrag in der Liste -->
         <li class="list-entry" data-id="$ID$">
-            <div class="movie title">
+            <div class="movieTitleRate">
                 $MOVIETITLERATE$
             </div>
             <div class="rating">
